# algotrade

./: .env.example  Dockerfile  README.md  alembic.ini  data_population_progress.json  docker-compose.yml  next_prompt.txt  pyproject.toml  tinker.ipynb
.devcontainer/: devcontainer.json
.devcontainer/scripts/: init-database.sh  init-db.sql  init_db.sql
alembic/: env.py
alembic/versions/: 7f06c59a2a15_initial_trading_database_schema_with_.py  9aacaf28ab2f_initial_trading_database_schema_with_.py
docs/data/: data_assets.md  news.md  prices.md
docs/deployment/: deployment_process.md
docs/model/: model_card_template.md  model_implementation_strategies.md
docs/research/: trading.md
scripts/: diagnose_database_connection.py  entrypoint.sh  init_database.py  populate_historical_data.py  setup_db.py  test_entrypoint.py  test_fixed_connection.py
src/config/: logging.py  settings.py
src/data/: __init__.py  base.py  news_data.py  price_data.py  trading_data.py  validation.py
src/database/: __init__.py  connection.py  migrations.py  monitoring.py
src/models/: embeddings.py
src/services/: alpaca_service.py  data_insertion_service.py  embedding_service.py  huggingface_models.py  progress_manager.py
src/trading/: market_hours.py
