[project]
name = "algotrade"
version = "0.1.0"
description = "Automated trading bot using Alpaca API and deep learning"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.25.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.2",
    "psycopg2-binary>=2.9.7",
    "apscheduler>=3.10.4",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "httpx>=0.25.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "black>=23.9.0",
    "isort>=5.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling where our package is
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "black>=23.9.0",
    "isort>=5.12.0"
]